# ten-10

./: .env  README.md  conftest.py  pyproject.toml
pages/: calculator.py  login.py
tests/: test_calculator.py  test_login.py
